<resources>
    <string name="app_name">sample</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="todo_text">タスク</string>
    <string name="box_text">ジャンル</string>
    <string name="date_text">日付</string>
    <string name="time_text">時間</string>
    <string name="limit_text">期限</string>
    <string name="memo_text">メモ</string>
    <string name="archive_text">アーカイブ</string>
    <string name="all_text">全て</string>
    <string name="edit_text">追加</string>
    <string name="edit_box_text">カテゴリを作成</string>
    <string name="edit_todo_text">タスクを入力</string>
    <string name="input_text">カテゴリを入力してください</string>
    <string name="complete_text">完了済み</string>
    <string name="today_text">今日</string>
    <string name="delete_text">完全に削除</string>
    <string name="back_text">長押しで元に戻す</string>
    <string name="reminder_text">リマインダーを設定</string>
    <string name="date_reminder_text">日付けとリマインダーを設定</string>
    <string name="finish_text">完了</string>
    <string name="limit_clear_text">期限をクリア</string>
</resources>
